[tool]
[tool.poetry]
name = "monkeyshot"
version = "0.1.0"
homepage = "https://github.com/MihailCosmin/monkeyshot"
description = "Top-level package for monkeyshot."
authors = ["Cosmin Munteanu <munteanumihailcosmin@gmail.com>"]
readme = "README.rst"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Win32 (MS Windows)',
    'Environment :: MacOS X',
    'Environment :: X11 Applications',
    'Environment :: Web Environment',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development',
    'Topic :: Communications :: Email',
    'Topic :: Office/Business',
]
packages = [
    { include = "monkeyshot" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"